// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`license createLicenseFileContents 1`] = `
"================================================
@rnx-kit/console 1.2.3-fixedVersionForTesting
--
MIT (https://spdx.org/licenses/MIT.html)
================================================

================================================
yargs 1.2.3-fixedVersionForTesting
--
MIT License

Copyright 2010 James Halliday (mail@substack.net); Modified work Copyright 2014 Contributors (ben@npmjs.com)

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\"Software\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
================================================

"
`;

exports[`license createLicenseFileContentsWithWrappers 1`] = `
"preamble 1
2
3
4
Preamble 2
================================================
@rnx-kit/console 1.2.3-fixedVersionForTesting
--
MIT (https://spdx.org/licenses/MIT.html)
================================================

================================================
yargs 1.2.3-fixedVersionForTesting
--
MIT License

Copyright 2010 James Halliday (mail@substack.net); Modified work Copyright 2014 Contributors (ben@npmjs.com)

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\"Software\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
================================================

additional 1
2
3
4
additional 2
"
`;

exports[`license createLicenseJSON 1`] = `
Object {
  "packages": Array [
    Object {
      "copyright": "No copyright notice",
      "license": "MIT",
      "name": "@rnx-kit/console",
      "version": "1.2.3-fixedVersionForTesting",
    },
    Object {
      "copyright": "Copyright 2010 James Halliday (mail@substack.net); Modified work Copyright 2014 Contributors (ben@npmjs.com)",
      "license": "MIT",
      "name": "yargs",
      "version": "1.2.3-fixedVersionForTesting",
    },
    Object {
      "copyright": "No copyright notice",
      "license": "Unlicensed",
      "name": "private-package",
      "version": "1.0.0",
    },
  ],
}
`;

exports[`license extractLicenses 1`] = `
Array [
  Object {
    "license": "MIT",
    "licenseURLs": Array [
      "https://spdx.org/licenses/MIT.html",
    ],
    "name": "@rnx-kit/console",
    "path": "~/packages/console",
    "version": "1.2.3-fixedVersionForTesting",
  },
  Object {
    "license": "MIT",
    "licenseFile": "LICENSE",
    "licenseText": "MIT License

Copyright 2010 James Halliday (mail@substack.net); Modified work Copyright 2014 Contributors (ben@npmjs.com)

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\"Software\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
",
    "licenseURLs": Array [
      "https://spdx.org/licenses/MIT.html",
    ],
    "name": "yargs",
    "path": "~/node_modules/yargs",
    "version": "1.2.3-fixedVersionForTesting",
  },
  Object {
    "license": "Unlicensed",
    "licenseURLs": Array [],
    "name": "private-package",
    "path": ".",
    "version": "1.0.0",
  },
]
`;
